# asana-cli

./: CHANGELOG.md  Cargo.toml  README.ja.md  README.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-04-15-rust-port.md
skills/: README.ja.md  README.md
skills/asana-cli-operator/: SKILL.md
skills/asana-cli-operator/evals/: evals.json
src/: asana_api.rs  cli.rs  config.rs  lib.rs  main.rs  oauth.rs  oauth_callback.rs
tests/: asana_api.rs  cli.rs  oauth_callback.rs  oauth_config.rs
