[package]
name = "asana-cli"
version = "0.1.0"
edition = "2024"
description = "Asana OAuth CLI in Rust"
license = "MIT"
repository = "https://github.com/ktutumi/asana-cli"
rust-version = "1.94"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.48", features = ["derive", "env", "string"] }
dirs = "6.0.0"
percent-encoding = "2.3.2"
rand = "0.9.2"
reqwest = { version = "0.12.23", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
time = { version = "0.3.43", features = ["formatting"] }
url = "2.5.7"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.23.0"
wiremock = "0.6.5"
